# redshift

./: Makefile.am  configure.ac
contrib/: redshift.spec.in
src/: Makefile.am  colorramp.c  colorramp.h  gamma-quartz.c  gamma-quartz.h  redshift.c  systemtime.c
src/redshift-gtk/: statusicon.py
